2001-10-06  Morten Welinder  <terra@diku.dk>

	* src/workbook-control-gui.c (cb_edit_search_action): Handle
 	comments.

	* src/search.c (search_replace_cell, search_replace_comment): New
 	functions, extracted from commands.c.

	* src/commands.c (cmd_search_replace_do_cell): Use search_replace
 	and search_replace_comment.

2001-10-06  Morten Welinder  <terra@diku.dk>

	* src/workbook-control-gui.c (cb_edit_search): Implement search.

	* src/search.c (search_collect_cells): New function, extracted
 	from commands.c.
	(search_match_string): New function to check for match only.

	* src/gui-util.c (gnumeric_keyed_dialog): Constify.

2001-10-05  Jody Goldberg <jgoldberg@home.com>

	* src/number-match.c (format_match) : compute_value returns a Value
	  now.
	(compute_value) : return a Value.

2001-10-05  Jody Goldberg <jgoldberg@home.com>

	* src/gnumeric-graph.c (gnm_graph_series_set_dimension) : new.
	(gnm_graph_series_delete) : new.

	* idl/GNOME_Gnumeric_Graph.idl : Add seriesSetDimension, and
	  seriesDelete.  Bump the idl version.

2001-10-05  Morten Welinder  <terra@diku.dk>

	* src/commands.c (cmd_search_replace_do): Leg work for search.
	* src/search.h: Ditto.

2001-10-05  Jody Goldberg <jgoldberg@home.com>

	* src/application.c (application_init) : Add a matching save icon for
	  the toolbar.

	* src/workbook-control-gui.c (workbook_standard_toolbar) : Use it.
	* src/GNOME_Gnumeric.xml : and here.

2001-10-04  Jody Goldberg <jgoldberg@home.com>

	* src/analysis-tools.c (get_data) : teeny tiny fixups.  use
	  prepend/reverse rather than append.  Add an ignore_blanks
	  flag.

2001-10-04  Jody Goldberg <jgoldberg@home.com>

	* src/analysis-tools.c (set_cell) : Use value_new_empty in place of an
	  empty string.
	(set_cell_value) : don't clip singletons.

2001-10-04  Jody Goldberg <jgoldberg@home.com>

	* src/number-match.c (format_create_regexp) : handle embedded strings
	  properly.

2001-10-04  Jody Goldberg <jgoldberg@home.com>
