@@ -1,3 +1,9 @@
+2001-10-06  Jody Goldberg <jgoldberg@home.com>
+
+	* src/dialogs/dialog-stf-preview.c (stf_preview_new) : Use
+	  gdk_fontset_load to be more friendly in multi-byte environments.
+	* src/style.c (style_font_new_simple) : ditto.
+
 2001-10-06  Morten Welinder  <terra@diku.dk>
 
 	* src/workbook-control-gui.c (cb_edit_search_action): Handle
